Added DTOs and Controllers for Buyer and Sale
